# backend/routes/endpoints/user_routes.py
@@ -1,11 +1,12 @@
 # backend/routes/endpoints/user_routes.py
 from fastapi import APIRouter, Form, HTTPException
 from backend.init_db import init_db
-from backend.routes.crud.users_crud import (
+from backend.routes.crud.user_crud import (
     get_user_by_id,
     get_user_by_username,
     get_all_users,
     create_user,
+    update_user,
     delete_user,
     get_user_by_query
 )
@@ -20,7 +21,6 @@ def users_list():
     return get_all_users()
 
 # get user by query (username, name or surname)
-# /users/search?query=...
 @router.get("/search", response_model=List[UserModel])
 def users_by_query(query: str):
     user = get_user_by_query(query)
@@ -29,7 +29,7 @@ def users_by_query(query: str):
     return user
 
 # Get user by ID
-@router.get("/{user_id}", response_model=UserModel)
+@router.get("/id/{user_id}", response_model=UserModel)
 def user_by_id(user_id: int):
     user = get_user_by_id(user_id)
     if not user:
@@ -50,13 +50,25 @@ async def user_create(
     username: str = Form(...),
     name: str = Form(...),
     surname: str = Form(...),
-    email: str = Form(...)
+    email: str = Form(...),
 ):
     user = create_user(username, name, surname, email)
     return user
 
+# PUT /users/{user_id} → update user
+@router.put("/{user_id}", response_model=UserModel)
+async def update_user_api(
+    user_id: int,
+    email: Optional[str] = Form(None),
+    surname: Optional[str] = Form(None)
+):
+    user = update_user(user_id, email=email, surname=surname)
+    if not user:
+        raise HTTPException(status_code=404, detail="User not found")
+    return user
+
 # Delete a user by ID
-@router.delete("/{user_id}")
+@router.delete("/id/{user_id}")
 def user_delete_by_id(user_id: int):
     success = delete_user(user_id)
     if not success:
